--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "nodemon --exec ts-node src/server.ts",
 		"start": "node dist/server.js",
-		"build": "tsc"
+		"build": "tsc && cpx \"public/**/*\" dist/public"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,13 +15,15 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.19.2",
+		"pusher": "^5.2.0",
 		"socket.io": "^4.7.3"
 	},
 	"devDependencies": {
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.21",
-		"@types/node": "^18.15.11",
+		"@types/node": "^22.5.0",
 		"@types/socket.io": "^3.0.2",
+		"cpx": "^1.5.0",
 		"nodemon": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5"
