--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "react-split": "^2.0.14",
         "screenfull": "^6.0.2",
         "socket.io-client": "^4.7.3",
+        "sweetalert2": "^11.12.4",
         "tldraw": "^2.1.4",
         "uuid": "^9.0.1",
         "vscode-icons-js": "^11.6.1"
